hphp/hack/test/typecheck/new_inference/transitive_error_4.php.like_types.exp
File "transitive_error_4.php", line 16, characters 5-6:
Invalid argument (Typing[4110])
File "transitive_error_4.php", line 10, characters 25-28:
Expected C<[unresolved]>
File "transitive_error_4.php", line 6, characters 19-22:
But got dynamic because it is an unenforceable type
